--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   curved_navigation_bar: ^0.3.7
-
+  fluttertoast: ^8.0.4
+  woocommerce: ^0.9.7
+  http: ^0.12.1
+  dio: ^3.0.9
+  shared_preferences: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
