--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
   fluttertoast: ^8.0.4
   woocommerce: ^0.9.7
   http: ^0.12.1
-  dio: ^3.0.9
   shared_preferences: ^2.0.5
   flutter_html: ^1.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +54,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
+     - assets/logo.png
+     - assets/icon.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
