--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,13 @@ dependencies:
     sdk: flutter
   curved_navigation_bar: ^0.3.7
   fluttertoast: ^8.0.4
-  woocommerce: ^0.9.7
+  #woocommerce: ^0.9.7
   http: ^0.12.1
   shared_preferences: ^2.0.5
   flutter_html: ^1.3.0
   html: ^0.14.0+4
+  crypto: ^2.1.3
+  flutter_secure_storage: ^3.3.3
 
 
 
