--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,22 +24,30 @@ dependencies:
   flutter:
     sdk: flutter
   curved_navigation_bar: ^0.3.7
-  fluttertoast: ^8.0.4
+  fluttertoast: 8.0.4
   #woocommerce: ^0.9.7
-  http: ^0.12.1
+  http: ^0.13.3
   shared_preferences: ^2.0.5
-  flutter_html: ^1.3.0
-  html: ^0.14.0+4
-  crypto: ^2.1.3
-  flutter_secure_storage: ^3.3.3
+  flutter_html: ^2.0.0
+  html: ^0.15.0
+  crypto: ^3.0.1
+  flutter_secure_storage: ^4.2.0
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
+
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+
   flutter_test:
     sdk: flutter
 
@@ -59,6 +67,7 @@ flutter:
      - assets/
      - assets/logo.png
      - assets/icon.jpg
+     - assets/logo.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
