--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   html: ^0.15.0
   crypto: ^3.0.1
   flutter_secure_storage: ^4.2.0
+  firebase_core: ^1.2.0
+  firebase_auth: ^1.2.0
+  flutter_country_picker: ^0.1.6
+  sms_autofill: ^2.0.0
+  url_launcher: ^6.0.4
+
 
 
 
