--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sms_autofill: ^2.0.0
   url_launcher: ^6.0.4
   carousel_slider: ^3.0.0
+  flutter_localizations:
+    sdk: flutter
+
 
 
 
@@ -75,6 +78,9 @@ flutter:
      - assets/logo.png
      - assets/icon.jpg
      - assets/logo.jpg
+     - lib/lang/en.json
+     - lib/lang/ms.json
+     - lib/lang/zh.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
